# clean-my-keyboard

./: CMakeLists.txt  README.md
docs/: architecture.md
include/: app.hpp  device_manager.hpp  device_validator.hpp  evdev_backend.hpp  keyboard_backend.hpp  keyboard_device.hpp  keyboard_service.hpp  logger.hpp  polkit_backend.hpp  signals.hpp  types.hpp  udev_monitor.hpp  window.hpp
packaging/: PKGBUILD  clean-my-keyboard.desktop  clean-my-keyboard.policy.in
resources/: style.css
src/: app.cpp  device_manager.cpp  device_validator.cpp  evdev_backend.cpp  helper_main.cpp  keyboard_device.cpp  keyboard_service.cpp  logger.cpp  main.cpp  polkit_backend.cpp  resources.cpp  resources.hpp  signals.cpp  udev_monitor.cpp  window.cpp
